<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kunal26das.quizapp.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:text="@string/question_four"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:checked="@={viewModel.question4option1}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:checked="@={viewModel.question4option2}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:checked="@={viewModel.question4option3}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/javascript" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:checked="@={viewModel.question4option4}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kotlin" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
            app:layout_constraintStart_toStartOf="@+id/radioGroup2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>