<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_5"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:text="@string/question_five"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:minWidth="192dp"
                android:maxWidth="192dp"
                android:minLines="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>